--- a/Regression Analysis.ipynb
+++ b/Regression Analysis.ipynb
@@ -15,7 +15,7 @@
     "id": "kaOj1equPMAb"
    },
    "source": [
-    "I am a data professional at TikTok. The data team is working towards building a machine learning model that can be used to determine whether a video contains a claim or whether it offers an opinion. With a successful prediction model, TikTok can reduce the backlog of user reports and prioritize them more efficiently.\n",
+    "The data team is working towards building a machine learning model that can be used to determine whether a video contains a claim or whether it offers an opinion. With a successful prediction model, TikTok can reduce the backlog of user reports and prioritize them more efficiently.\n",
     "\n",
     "The team is getting closer to completing the project, having completed an initial plan of action, initial Python coding work, EDA, and hypothesis testing.\n",
     "\n",
