--- a/Hypothesis Testing.ipynb
+++ b/Hypothesis Testing.ipynb
@@ -15,7 +15,7 @@
     "id": "T_Ds8CYcvlhT"
    },
    "source": [
-    "As a data professional at TikTok. The current project is reaching its midpoint; a project proposal, Python coding work, and exploratory data analysis have all been completed.\n",
+    "The current project is reaching its midpoint; a project proposal, Python coding work, and exploratory data analysis have all been completed.\n",
     "\n",
     "The team has reviewed the results of the exploratory data analysis and the previous executive summary the team prepared. I received an email from Orion Rainier, Data Scientist at TikTok, with my next assignment: determine and conduct the necessary hypothesis tests and statistical analysis for the TikTok classification project.\n",
     "\n"
