--- a/A cursory inspection of the dataset.ipynb
+++ b/A cursory inspection of the dataset.ipynb
@@ -22,7 +22,6 @@
     "id": "zJCatj3xzrQZ"
    },
    "source": [
-    "I have just started as a data professional at TikTok (fictionally 🙂).\n",
     "\n",
     "The team is still in the early stages of the project. I have received notice that TikTok's leadership team has approved the project proposal. To gain clear insights to prepare for a claims classification model, TikTok's provided data must be examined to begin the process of exploratory data analysis (EDA).\n",
     "\n",
@@ -35,7 +34,7 @@
     "id": "rgSbVJvomcVa"
    },
    "source": [
-    "# ** Inspect and analyze data**\n",
+    "# ** Inspecting and analyzing data**\n",
     "\n",
     "In this task, I will examine data provided and prepare it for analysis.\n",
     "<br/>\n",
