--- a/Hypothesis Testing.ipynb
+++ b/Hypothesis Testing.ipynb
@@ -175,7 +175,7 @@
    "outputs": [],
    "source": [
     "# Load dataset into dataframe\n",
-    "data = pd.read_csv(\"tiktok_dataset.csv\")"
+    "data = pd.read_csv(\"data/tiktok_dataset.csv\")"
    ]
   },
   {
