--- a/ML Model Outcomes.ipynb
+++ b/ML Model Outcomes.ipynb
@@ -250,7 +250,7 @@
    "outputs": [],
    "source": [
     "# Load dataset into dataframe\n",
-    "data = pd.read_csv(\"tiktok_dataset.csv\")"
+    "data = pd.read_csv(\"data/tiktok_dataset.csv\")"
    ]
   },
   {
